--- a/package.json
+++ b/package.json
@@ -15,5 +15,8 @@
   "bugs": {
     "url": "https://github.com/balokdecoy/Team-Profile/issues"
   },
-  "homepage": "https://github.com/balokdecoy/Team-Profile#readme"
+  "homepage": "https://github.com/balokdecoy/Team-Profile#readme",
+  "dependencies": {
+    "inquirer": "^7.3.3"
+  }
 }
