--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
   "homepage": "https://github.com/balokdecoy/Team-Profile#readme",
   "dependencies": {
     "inquirer": "^7.3.3"
+  },
+  "devDependencies": {
+    "jest": "^26.6.3"
   }
 }
